# itmemory-project

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  resources.qrc
src/android/: AndroidManifest.xml  version.gradle.in
src/api/: APIClient.cpp  APIClient.h  JsonAPI.cpp  JsonAPI.h  PostsAPI.cpp  PostsAPI.h
src/api/models/: Post.cpp  Post.h
src/api/utils/: JsonHelper.cpp  JsonHelper.h
src/contents/ui/: ExhibitPage.qml  main.qml
